Make sure whitespace is preserved

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,6 +107,7 @@ code,
 kbd,
 samp {
   font-family: monospace, sans-serif;
+  white-space: pre !important;
 }
 
 html {
